Restarting register at the default state with just adding the code to initialise a profile / adding ressources via resx files with a dynamic selecation of the language depending on the requst cultuer / adding email sender without activation email confirmation

--- a/activities/Pages/Index.razor
+++ b/activities/Pages/Index.razor
@@ -1,8 +1,11 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+@using System.Globalization;
 
-<h1>Hello, world!</h1>
+<h1>Welcome</h1>
+<p>
+    <b>CurrentCulture</b>: @CultureInfo.CurrentCulture
+</p>
+@code {
 
-Welcome to your new app.
-<SurveyPrompt Title="How is Blazor working for you?" />
+}
