--- a/activities/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/activities/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -33,6 +33,8 @@
                 <div class="col-md-6">
                     <div class="form-floating">
                         <select class="form-control" asp-for="Input.IdCountry">
+                            <option value="0">Select a country</option>
+
                             @foreach (var cnt in Model.countries)
                             {
                                 <option value="@cnt.Id">@cnt.Name</option>
@@ -55,6 +57,8 @@
                 <div class="col-md-6">
                     <div class="form-floating">
                         <select class="form-control" asp-for="Input.IdLanguage">
+                            <option value="0">Select a language</option>
+
                             @foreach (var cnt in Model.languages)
                             {
                                 <option value="@cnt.Id">@cnt.Name</option>
@@ -67,6 +71,8 @@
                 <div class="col-md-6">
                     <div class="form-floating">
                         <select class="form-control" asp-for="Input.IdActivity">
+                            <option value="0">Select an activity</option>
+
                             @foreach (var cnt in Model.activities)
                             {
                                 <option value="@cnt.Id">@cnt.Name</option>
