--- a/activities/Areas/Identity/Pages/Account/Register.cshtml
+++ b/activities/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,6 +1,5 @@
 ﻿@page
 @model RegisterModel
-@using activities.Models;
 @{
     ViewData["Title"] = "Register";
 }
@@ -8,127 +7,60 @@
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
-    <div class="col-md-10">
-        <form enctype="multipart/form-data" id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+    <div class="col-md-4">
+        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="row mb-2">
-                <div class="col-md-6">
-                    <div class="form-floating">
-                        <input asp-for="Input.Name" class="form-control" autocomplete="FullName" aria-required="true" placeholder="Joe doe" />
-                        <label asp-for="Input.Name">Full Name</label>
-                        <span asp-validation-for="Input.Name" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-floating">
-                        <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                        <label asp-for="Input.Email">Email</label>
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
-                    </div>
-                </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                <label asp-for="Input.Email">Email</label>
+                <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-
-            <div class="row mb-2">
-                <div class="col-md-6">
-                    <div class="form-floating">
-                        <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                        <label asp-for="Input.Password">Password</label>
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-floating">
-                        <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                        <label asp-for="Input.ConfirmPassword">Confirm Password</label>
-                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                    </div>
-                </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                <label asp-for="Input.Password">Password</label>
+                <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-
-            <div class="row mb-2">
-                <div class="col-md-6">
-                    <div class="form-floating">
-                        <select class="form-control" asp-for="Input.IdCountry">
-                            @foreach (var cnt in Model.countries)
-                            {
-                                <option value="@cnt.Id">@cnt.Name</option>
-                            }
-                        </select>
-                        <label asp-for="Input.IdCountry">Country</label>
-                        <span asp-validation-for="Input.IdCountry" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-floating">
-                        <input asp-for="Input.City" class="form-control" autocomplete="City" aria-required="true" placeholder="New York" />
-                        <label asp-for="Input.City">City</label>
-                        <span asp-validation-for="Input.City" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row mb-2">
-                <div class="col-md-6">
-                    <div class="form-floating">
-                        <select class="form-control" asp-for="Input.IdLanguage">
-                            @foreach (var cnt in Model.languages)
-                            {
-                                <option value="@cnt.Id">@cnt.Name</option>
-                            }
-                        </select>
-                        <label asp-for="Input.IdLanguage">Language</label>
-                        <span asp-validation-for="Input.IdLanguage" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-floating">
-                        <select class="form-control" asp-for="Input.IdActivity">
-                            @foreach (var cnt in Model.activities)
-                            {
-                                <option value="@cnt.Id">@cnt.Name</option>
-                            }
-                        </select>
-                        <label asp-for="Input.IdActivity">Activity</label>
-                        <span asp-validation-for="Input.IdActivity" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="row mb-2">
-                <div class="col-md-12">
-                    <div class="form-floating">
-                        <textarea asp-for="Input.About" class="form-control" style="height:100px" autocomplete="About" aria-required="true" placeholder="tell us about your self"></textarea>
-                        <label asp-for="Input.About">About</label>
-                        <span asp-validation-for="Input.About" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="row mb-2">
-                <div class="col-md-12">
-                    <div>
-                        <label asp-for="Input.Photo">Photo</label>
-                        <input type="file" accept=".png,.jpeg,.jpg" asp-for="Input.Photo" class="form-control" />
-                        <span asp-validation-for="Input.Photo" class="text-danger"></span>
-                        <small>10 mb max and only PNG,JPG and JPEG are accpeted.</small>
-                    </div>
-                </div>
-            </div>
-            <div class="row mb-2">
-                <div class="col-md-12">
-                    <div class="form-check">
-                        <input asp-for="Input.Available" class="form-check-input" type="checkbox" value="true" checked>
-                        <label class="form-check-label" asp-for="Input.Available">
-                            Available
-                        </label>
-                    </div>
-                </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
+    <div class="col-md-6 col-md-offset-2">
+        <section>
+            <h3>Use another service to register.</h3>
+            <hr />
+            @{
+                if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                {
+                    <div>
+                        <p>
+                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
+                            about setting up this ASP.NET application to support logging in via external services</a>.
+                        </p>
+                    </div>
+                }
+                else
+                {
+                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                        <div>
+                            <p>
+                                @foreach (var provider in Model.ExternalLogins!)
+                                {
+                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                }
+                            </p>
+                        </div>
+                    </form>
+                }
+            }
+        </section>
+    </div>
 </div>
-
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
