--- a/activities/Pages/Profile.razor
+++ b/activities/Pages/Profile.razor
@@ -6,13 +6,14 @@
 @using activities.Repository.UserProfil;
 @inject IUserProfileReposiotry _profileService;
 @inject AuthenticationStateProvider AuthenticationStateProvider
-@using activities.Repository.Countries;
-@using activities.Repository.Languages;
 @using activities.Repository.Activities;
-@inject ICountriesRepository CountriesSerivce;
-@inject ILanguagesRepository LanguagesService;
 @inject IActivitiesRepository ActivitiesService;
 @inject IHttpContextAccessor HttpContextAccessor;
+@using Microsoft.Extensions.Localization;
+@using activities.Resources;
+@inject IStringLocalizer<Countries> CountriesLocalizer
+@inject IStringLocalizer<Languages> LanguagesLocalizer
+
 <h3>User profile</h3>
 <AuthorizeView>
     <Authorized>
@@ -150,6 +151,10 @@
     public string EditMessageError;
 
     public string Base64Photo;
+
+    private Dictionary<string, string> countries = new Dictionary<string, string>();
+    private Dictionary<string, string> languages = new Dictionary<string, string>();
+
     protected override async Task OnInitializedAsync()
     {
         await Load();
@@ -157,6 +162,10 @@
     }
     private async Task Load()
     {
+        countries = CountriesLocalizer.GetAllStrings().ToDictionary(s => s.Name, s => s.Value);
+
+        languages = LanguagesLocalizer.GetAllStrings().ToDictionary(s => s.Name, s => s.Value);
+
         var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
         var userIdClaim = authState?.User?.Claims.Where(c => c.Type == ClaimTypes.NameIdentifier).FirstOrDefault();
 
@@ -211,8 +220,7 @@
     {
         try
         {
-            CountriesSerivce.InitData(GetBrowserLanguage.GetLanguageFromHeader(HttpContextAccessor.HttpContext)).Wait();
-            return CountriesSerivce.GetById(id).Name;
+            return countries[id.ToString()];
         }
         catch
         {
@@ -223,7 +231,7 @@
     {
         try
         {
-            return LanguagesService.GetById(id).Name;
+            return languages[id.ToString()];
         }
         catch
         {
