--- a/activities/Pages/Search.razor
+++ b/activities/Pages/Search.razor
@@ -22,7 +22,7 @@
             <InputSelect class="form-control" ValueExpression="@(()=>searchModel.IdCountry)" Value="@searchModel.IdCountry"
                          ValueChanged="@((int value) => CountryChanged(value))">
                 <option value="0">Select a country</option>
-                @foreach (var cnt in countries.Where(x => ActiveCountries.Contains(x.Key)))
+                @foreach (var cnt in countries.Where(x => ActiveCountries.Contains(x.Key)).OrderBy(s => s.Value))
                 {
                     <option value="@cnt.Key">@cnt.Value</option>
                 }
@@ -38,7 +38,7 @@
             <label class="form-label">Languages</label>
             <InputSelect class="form-control" @bind-Value="searchModel.IdLanguage">
                 <option value="0">Select a language</option>
-                @foreach (var cnt in languages.Where(x => ActiveLanguages.Contains(x.Key)))
+                @foreach (var cnt in languages.Where(x => ActiveLanguages.Contains(x.Key)).OrderBy(s => s.Value))
                 {
                     <option value="@cnt.Key">@cnt.Value</option>
                 }
@@ -48,7 +48,7 @@
             <label class="form-label">Activities</label>
             <InputSelect class="form-control" @bind-Value="searchModel.IdActivity">
                 <option value="0">Select an activity</option>
-                @foreach (var cnt in activities.Where(x => ActiveActivities.Contains(x.Key)))
+                @foreach (var cnt in activities.Where(x => ActiveActivities.Contains(x.Key)).OrderBy(s => s.Value))
                 {
                     <option value="@cnt.Key">@cnt.Value</option>
                 }
@@ -72,12 +72,14 @@
     </div>
 
 </EditForm>
+<hr />
 @if (profiles == null)
 {
     <p><em>Loading...</em></p>
 }
 else
 {
+    <p>Total of @TotalSearchResults users found</p>
     <table class="table">
         <thead>
             <tr>
