problem with approval state / problem with search users

--- a/activities/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/activities/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -105,7 +105,7 @@
             <div class="row mb-2">
                 <div class="col-md-12">
                     <div class="form-check">
-                        <input asp-for="Input.Available" class="form-check-input" type="checkbox" value="true" checked>
+                        <input asp-for="Input.Available" class="form-check-input" type="checkbox" value="true">
                         <label class="form-check-label" asp-for="Input.Available">
                             Available
                         </label>
