--- a/activities/Pages/Search.razor
+++ b/activities/Pages/Search.razor
@@ -134,7 +134,7 @@ else
             IdLanguage = 0,
             City = "",
             PageSize = 25,
-            Approval = -1,
+            Approval = -1,// set this to 1 and it will display only approved users ( -1 : all users)
             Member = -1
         };
 
