--- a/activities/Shared/NavMenu.razor
+++ b/activities/Shared/NavMenu.razor
@@ -16,14 +16,14 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="search">
-                <span class="oi oi-plus" aria-hidden="true"></span> Search
+                <span class="oi oi-person" aria-hidden="true"></span> Search
             </NavLink>
         </div>
 
         <AuthorizeView Roles="Admin">
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="users">
-                    <span class="oi oi-plus" aria-hidden="true"></span> Manage Users
+                    <span class="oi oi-cog" aria-hidden="true"></span> Manage Users
                 </NavLink>
             </div>
         </AuthorizeView>
