fixing member field display on the profile page

--- a/activities/Pages/Profile.razor
+++ b/activities/Pages/Profile.razor
@@ -176,7 +176,7 @@
                                                 <li class="list-group-item">City : <b>@SearchedProfile.City</b></li>
                                                 <li class="list-group-item">Language : <b>@MapLanguage(SearchedProfile.IdLanguage)</b></li>
                                                 <li class="list-group-item">Activity : <b>@MapActivity(SearchedProfile.IdActivity)</b></li>
-                                                <li class="list-group-item">Member : <b>@(SearchedProfile.Member == 1) ? "Yes" : "No"</b></li>
+                                                <li class="list-group-item">Member : <b>@(SearchedProfile.Member == 1 ? "Yes" : "No") </b></li>
                                             </ul>
                                         </div>
                                     </div>
