--- a/activities/Pages/Users.razor
+++ b/activities/Pages/Users.razor
@@ -74,6 +74,15 @@
             </InputSelect>
         </div>
         <div class="col-md-3">
+            <label class="form-label">Available</label>
+
+            <InputSelect class="form-control" @bind-Value="searchModel.Available">
+                <option value="-1">Available state</option>
+                <option value="1">Yes</option>
+                <option value="0">No</option>
+            </InputSelect>
+        </div>
+        <div class="col-md-3">
             <label class="form-label">Results per page</label>
 
             <InputSelect class="form-control" @bind-Value="searchModel.PageSize">
@@ -163,7 +172,8 @@ else
             City = "",
             PageSize = 25,
             Approval = -1,
-            Member = -1
+            Member = -1,
+            Available = -1
         };
 
     private UserProfile[]? profiles = new UserProfile[] { };
