fixing email confirmation / adding statistiques page

--- a/activities/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/activities/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -133,7 +133,7 @@
                 </div>
                 <div class="col-md-12">
                     <div class="form-floating">
-                        <textarea asp-for="Input.Other" class="form-control" style="height:100px" autocomplete="Other" aria-required="true" placeholder="Other"></textarea>
+                        <textarea asp-for="Input.Other" class="form-control" style="height:100px" autocomplete="Other" placeholder="Other"></textarea>
                         <label asp-for="Input.Other">Other</label>
                         <span asp-validation-for="Input.Other" class="text-danger"></span>
                     </div>
